[package]
name = "rust-shader-tools"
version = "0.1.0"
edition = "2021"

[features]
shader-structs = ["proc-macro2", "quote", "syn", "heck", "prettyplease"]
krvy = []

[dependencies]
anyhow = "1"
shaderc = "0.8.0"
thiserror = "1.0"
spirv-reflect = "0.2.3"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "1", features = ["full"], optional = true }
heck = { version = "0.4.0", optional = true }
prettyplease = {version = "0.1.21", optional = true }