[package]
name = "rust-shader-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
shaderc = "0.8.0"
thiserror = "1.0"
spirv-reflect = {git = "https://github.com/ArthurKValladares/spirv-reflect-rs", branch = "format-test"}
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["full"]}
heck = { version = "0.4.0"}
prettyplease = {version = "0.1.21"}
spirv = "0.2"